--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -20,6 +23,7 @@
     "firebase": "^10.4.0",
     "lucide-react": "^0.279.0",
     "react": "^18.2.0",
+    "react-activity": "^2.1.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-loader-spinner": "^5.4.5",
